# ureq

./: Cargo.toml  README.md  THOUGHTS.md  readystate.rs
.github/workflows/: test.yml
src/: agent.rs  async_impl.rs  body.rs  chunked.rs  conn.rs  conn_http1.rs  conn_http11.rs  conn_http2.rs  deadline.rs  dlog.rs  error.rs  h1.rs  header.rs  http11.rs  lib.rs  limit.rs  peek.rs  pool.rs  req_ext.rs  request.rs  res_ext.rs  response.rs  stream.rs  sync.rs  tls.rs  tls_pass.rs  tokio.rs  unit.rs  uri.rs  uri_ext.rs
src/h1/: chunked.rs  error.rs  http11.rs  limit.rs  mod.rs  task.rs
src/test/: mod.rs  range.rs  simplelog.rs
