[package]
name = "ureq"
version = "1.0.0"
authors = ["Martin Algesten <martin@lookback.io>"]
edition = "2018"

[features]
default = [
    "tokio",
]
std = [
    "async-std",
    "tokio-min",
]
tokio = [
    "tokio-exe",
]

[dependencies]
bytes = "*"
cookie = "*"
futures-io = { version = "0.3" }
futures-util = { version = "0.3", features=["io"] }
h2 = "*"
http = "*"
httparse = "*"
log = "*"
once_cell = "*"
qstring = "*"
async-trait = "*"
tls-api = "*"

async-std = { version = "*", optional = true }

# We always need a tokio impl also in the sync case.
tokio-min = { package = "tokio", version = "0.2", features = [], optional = true }
tokio-exe = { package = "tokio", version = "0.2", features = ["rt-core", "tcp", "dns"], optional = true }

[dev-dependencies]
tls-api-rustls = "*"