[package]
name = "ureq"
version = "1.0.0"
authors = ["Martin Algesten <martin@lookback.io>"]
edition = "2018"

[features]
default = [
    "async-std",
]
async-std = [
    "async-std-lib",
    "tokio-min",
]
tokio = [
    "tokio-exe",
]

[dependencies]
bytes = "*"
cookie = "*"
futures-io = { version = "0.3" }
futures-util = { version = "0.3", features=["io"] }
h2 = "*"
http = "*"
httparse = "*"
log = "*"
once_cell = "*"
qstring = "*"
async-trait = "*"
tls-api = "*"

async-std-lib = { package = "async-std", version = "*", optional = true }

# We always need a tokio impl also for async-std because tlsapi is using tokio traits.
tokio-min = { package = "tokio", version = "0.2", features = [], optional = true }
tokio-exe = { package = "tokio", version = "0.2", features = ["rt-core", "tcp", "dns"], optional = true }

[dev-dependencies]
tls-api-rustls = "*"