[package]
name = "ureq"
version = "1.0.0"
authors = ["Martin Algesten <martin@lookback.io>"]
edition = "2018"

[features]
default = [
    "tokio",
    "gzip"
]
async-std = [
    "async-std-lib",
    "tokio-min",
    "gzip"
]
tokio = [
    "tokio-exe",
]
gzip = [
    "async-compression",
    "flate2"
]


[dependencies]
bytes = "*"
cookie = "*"
futures-io = { version = "0.3" }
futures-util = { version = "0.3", features=["io"] }
h2 = "*"
http = "*"
httparse = "*"
log = "*"
once_cell = "*"
qstring = "*"
async-trait = "*"
tls-api = "*"
encoding_rs = "*"

## async-std
async-std-lib = { package = "async-std", version = "*", optional = true }

# We always need a tokio impl also for async-std because tlsapi is using tokio traits.
## async-std
tokio-min = { package = "tokio", version = "0.2", default-features = false, optional = true }
## tokio
tokio-exe = { package = "tokio", version = "0.2", default-features = false, features = ["rt-core", "tcp", "dns"], optional = true }

## gzip
async-compression = { version = "*", default-features = false, features = ["gzip", "futures-bufread"], optional = true }
flate2 = { version = "*", default-features = false, features = [], optional = true }

[dev-dependencies]
tls-api-rustls = "*"